--- a/package.json
+++ b/package.json
@@ -25,10 +25,15 @@
     "react-dom": "^18.2"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
+    "@thirdweb-dev/contracts": "^3.4.5",
     "@types/node": "^18.11.11",
     "@types/react": "^18",
+    "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
+    "hardhat": "^2.14.0",
     "typescript": "^4.9.4"
   }
 }
