--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
-    "@thirdweb-dev/react": "^3",
-    "@thirdweb-dev/sdk": "^3",
-    "ethers": "^5",
+    "@thirdweb-dev/auth": "^3.0.15",
+    "@thirdweb-dev/react": "^3.11.8",
+    "@thirdweb-dev/sdk": "^3.10.11",
+    "axios": "^1.3.6",
+    "ethers": "5",
+    "moment": "^2.29.4",
     "next": "^13",
+    "next-auth": "^4.22.1",
     "react": "^18.2",
     "react-dom": "^18.2"
   },
