--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next": "^13",
     "next-auth": "^4.22.1",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-window": "^1.8.9"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
@@ -34,6 +35,7 @@
     "@thirdweb-dev/contracts": "^3.4.5",
     "@types/node": "^18.11.11",
     "@types/react": "^18",
+    "@types/react-window": "^1.8.5",
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
