--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@thirdweb-dev/react": "^3.11.8",
     "@thirdweb-dev/sdk": "^3.10.11",
     "axios": "^1.3.6",
+    "bignumber.js": "^9.1.1",
     "ethers": "5",
     "moment": "^2.29.4",
     "next": "^13",
