--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bignumber.js": "^9.1.1",
     "ethers": "5",
     "moment": "^2.29.4",
+    "mongodb": "^5.5.0",
     "next": "^13",
     "next-auth": "^4.22.1",
     "react": "^18.2",
