--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prettier": "prettier",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -43,6 +44,7 @@
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
     "hardhat": "^2.14.0",
+    "prettier": "^2.8.8",
     "typescript": "^4.9.4"
   }
 }
