--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-auth": "^4.22.1",
     "react": "^18.2",
     "react-dom": "^18.2",
+    "react-ga": "^3.3.1",
     "react-window": "^1.8.9",
     "sharp": "^0.32.1"
   },
