--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
+    "@alchemy/aa-alchemy": "^0.1.0-alpha.22",
+    "@alchemy/aa-core": "^0.1.0-alpha.22",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.1",
-    "@thirdweb-dev/auth": "^3.1.0",
-    "@thirdweb-dev/react": "^3.13.0",
-    "@thirdweb-dev/sdk": "^3.10.20",
+    "@simplewebauthn/browser": "^7.4.0",
+    "@thirdweb-dev/auth": "^3",
+    "@thirdweb-dev/react": "^3",
+    "@thirdweb-dev/sdk": "^3",
+    "alchemy-sdk": "^2.9.2",
     "axios": "^1.3.6",
     "bignumber.js": "^9.1.1",
     "ethers": "5",
@@ -31,7 +34,8 @@
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-window": "^1.8.9",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
@@ -40,6 +44,7 @@
     "@types/node": "^18.11.11",
     "@types/react": "^18",
     "@types/react-window": "^1.8.5",
+    "@types/uuid": "^9.0.2",
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
