--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
-    "@alchemy/aa-alchemy": "^0.1.0-alpha.22",
-    "@alchemy/aa-core": "^0.1.0-alpha.22",
+    "@alchemy/aa-alchemy": "^0.1.0-alpha.25",
+    "@alchemy/aa-core": "^0.1.0-alpha.25",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
@@ -24,6 +24,7 @@
     "@thirdweb-dev/auth": "^3",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "@wagmi/chains": "^1.6.4",
     "alchemy-sdk": "^2.9.2",
     "axios": "^1.3.6",
     "bignumber.js": "^9.1.1",
