--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@alchemy/aa-alchemy": "^0.1.0-alpha.25",
     "@alchemy/aa-core": "^0.1.0-alpha.25",
+    "@auth/mongodb-adapter": "^1.0.0",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
     "@fontsource/roboto": "^4.5.8",
@@ -28,11 +29,14 @@
     "alchemy-sdk": "^2.9.2",
     "axios": "^1.3.6",
     "bignumber.js": "^9.1.1",
+    "cookies-next": "^2.1.2",
     "ethers": "5",
+    "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
-    "mongodb": "^5.5.0",
+    "mongodb": "^5.8.0",
     "next": "^13",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.4",
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-window": "^1.8.9",
@@ -43,6 +47,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@thirdweb-dev/contracts": "^3.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.11.11",
     "@types/react": "^18",
     "@types/react-window": "^1.8.5",
