--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@thirdweb-dev/contracts": "^3.5.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.11.11",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "^18",
     "@types/react-window": "^1.8.5",
     "@types/uuid": "^9.0.2",
