--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
     "mongodb": "^5.8.0",
+    "mongoose": "^7.4.4",
     "next": "^13",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
