--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^18.2",
     "react-window": "^1.8.9",
     "sharp": "^0.32.1",
+    "sweetalert2": "^11.7.27",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
