--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "eslint-config-next": "^13",
     "hardhat": "^2.14.0",
     "prettier": "^2.8.8",
-    "typescript": "^4.9.4"
+    "typescript": "5.0.4"
   }
 }
