--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^18",
     "@types/react-window": "^1.8.5",
     "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
