--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.29.4",
     "mongodb": "^5.8.0",
     "mongoose": "^7.4.4",
+    "mongoose-bignumber": "^2.0.0",
     "next": "^13",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.4",
