--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
-    "@alchemy/aa-alchemy": "^0.1.0-alpha.25",
-    "@alchemy/aa-core": "^0.1.0-alpha.25",
+    "@alchemy/aa-alchemy": "^3.4.1",
+    "@alchemy/aa-core": "^3.4.0",
     "@auth/mongodb-adapter": "^1.0.0",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.6",
@@ -27,7 +27,7 @@
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
     "@wagmi/chains": "^1.6.4",
-    "alchemy-sdk": "^2.9.2",
+    "alchemy-sdk": "^3.1.2",
     "axios": "^1.3.6",
     "bignumber.js": "^9.1.1",
     "cookies-next": "^2.1.2",
