--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@thirdweb-dev/auth": "^3",
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "@vercel/speed-insights": "^1.0.10",
     "@wagmi/chains": "^1.6.4",
     "alchemy-sdk": "^3.1.2",
     "axios": "^1.3.6",
