--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "react": "^18.2",
     "react-dom": "^18.2",
     "react-window": "^1.8.10",
+    "recoil": "^0.7.7",
     "sharp": "^0.32.1",
     "sweetalert2": "^11.7.27",
+    "swr": "^2.2.5",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
