--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^1.3.6",
     "bignumber.js": "^9.1.1",
     "cookies-next": "^2.1.2",
+    "custom-protocol-check": "^1.4.0",
     "ethers": "5",
     "jsonwebtoken": "^9.0.1",
     "moment": "^2.29.4",
