--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "thirdweb-app",
-  "version": "0.0.5-alpha",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
